--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=backend
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=diamond_shop_system
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=diamond_shop_system;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=12345
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
