--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
+    "gapi-script": "^1.2.0",
+    "jwt-decode": "^2.2.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-lazyload": "^3.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
+    "sweetalert2": "^11.11.0",
+    "swiper": "^11.1.3"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
@@ -36,5 +48,5 @@
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8080 "
 }
