--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/roboto": "^5.0.13",
+    "@hookform/resolvers": "^3.4.2",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@mui/x-data-grid": "^7.5.1",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
     "gapi-script": "^1.2.0",
@@ -32,7 +34,8 @@
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "sweetalert2": "^11.11.0",
-    "swiper": "^11.1.3"
+    "swiper": "^11.1.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
