create enums, commented entity Role and getTotalCustomer()

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.open-in-view=false
+
+# Google Login
+# spring.security.oauth2.client.registration.google.client-id=808575458023-dimtqf5lqkj48te421alc1ltkdrq3acf.apps.googleusercontent.com
+# spring.security.oauth2.client.registration.google.client-secret=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
