--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@mui/x-data-grid": "^7.5.1",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
+    "firebase": "^10.12.2",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^2.2.0",
     "leaflet": "^1.9.4",
