--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,10 @@
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
     "@mui/x-data-grid": "^7.5.1",
+    "@mui/x-date-pickers": "^7.6.2",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.11",
     "firebase": "^10.12.2",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^2.2.0",
