--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,10 +34,12 @@
     "react-lazyload": "^3.2.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.11.0",
-    "swiper": "^11.1.3",
+    "swiper": "^11.1.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
