--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.15.18",
     "@mui/x-data-grid": "^7.5.1",
     "@mui/x-date-pickers": "^7.6.2",
+    "@paypal/react-paypal-js": "^8.5.0",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
     "dayjs": "^1.11.11",
