--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@paypal/react-paypal-js": "^8.5.0",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
     "firebase": "^10.12.2",
     "gapi-script": "^1.2.0",
