--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -138,6 +138,12 @@
             <version>6.3.1</version>
         </dependency>
 
+        <!-- Google OAuth Client -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+            <version>2.3.3.RELEASE</version>
+        </dependency>
 
     </dependencies>
     <build>
