--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,9 @@
     "dayjs": "^1.11.11",
     "firebase": "^10.12.2",
     "gapi-script": "^1.2.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.2",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^2.2.0",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
@@ -35,6 +38,7 @@
     "react-icons": "^5.2.1",
     "react-lazyload": "^3.2.1",
     "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
